Cosmetic - USM fix misaligned scan start date (#3583)
* css fix

* independent scrolling for selected and available settings

--- a/admin-source-management/app/styles/admin-source-management/schedule-config/_effective-date.scss
+++ b/admin-source-management/app/styles/admin-source-management/schedule-config/_effective-date.scss
@@ -1,4 +1,4 @@
-.effective-date {
+.scan-start-date {
   padding: rsa-whitespace() rsa-whitespace() 0 0;
   .rsa-form-label {
     @include rsa-font(default,small);
